--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ p {
         <h1>Adil Ahmed</h1>
         <div class="contact-info">
             <p>Midvale, UT | 385.439.9833 | asahmed123@gmail.com</p>
+            <p><a href="https://www.linkedin.com/in/asahmed1/">LinkedIn</a> | <a href="https://github.com/asahmed123">GitHub</a></p>
         </div>
 
         <div class="section">
