--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Professional Experience</h2>
                 <div class="job">
                     <h3>IT Service Desk Technician</h3>
-                    <p>Morgan Stanley – South Jordan, UT | November 2023 – Present</p>
+                    <p>Morgan Stanley – South Jordan, UT | November 2023 – November 2024</p>
                     <ul>
                         <li>Troubleshot software and network issues, minimizing user downtime through effective root-cause analysis.</li>
                         <li>Administered SecurID and streamlined Intune configurations to enhance user productivity.</li>
