--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                     <li><strong>Programming & Development:</strong> TypeScript, JavaScript, Python, Bash, Linux CLI</li>
                     <li><strong>Frameworks & Libraries:</strong> ReactJS</li>
                     <li><strong>Frontend:</strong> HTML5, CSS3, Bootstrap</li>
-                    <li><strong>Testing & Debugging:</strong> Jasmine, Jest, Chrome DevTools</li>
-                    <li><strong>Cloud & Virtualization:</strong> AWS, Docker, Virtual Machines (VMs)</li>
-                    <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
+                    <li><strong>Version Control:</strong> Git, GitHub</li>
                     <li><strong>Networking Concepts:</strong> OSI Model, ping, trace route</li>
                 </ul>
             </section>
